Add appointment page Added 3rd party API -Stripe for payment

--- a/public/project/client/views/users/customer/appointment.view.html
+++ b/public/project/client/views/users/customer/appointment.view.html
@@ -1,1 +1,26 @@
 <h1 class="page-header">Choose Appointment</h1>
+<div class="container">
+    <div class="row">
+        <div class="col-xs-12">
+            <p>Select Appointment time</p>
+            </div>
+        <div class="col-xs-12">
+        <ul class="dropdown">
+            <a href="#appointment" id="appointmentDropdown" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">
+                Choose time <span class="caret"></span></a>
+            <ul class="dropdown-menu" aria-labelledby="appointmentDropdown">
+                <li>9:00 - 10:00</li>
+                <li>10:00 - 11:00</li>
+                <li>11:00 - 12:00</li>
+                <li>12:00 - 13:00</li>
+                <li>13:00 - 14:00</li>
+                <li>15:00 - 16:00</li>
+                <li>16:00 - 17:00</li>
+                <li>17:00 - 18:00</li>
+                <li>18:00 - 19:00</li>
+            </ul>
+        </ul>
+        </div>
+        </div>
+    </div>
+</div>
