--- a/public/project/client/views/users/customer/checkout.view.html
+++ b/public/project/client/views/users/customer/checkout.view.html
@@ -1,4 +1,5 @@
 <h2 class="page-header">Payment Details</h2>
+<h5>Using Stripe a <b>Secure</b> 3rd Party API</h5>
 <script src="https://checkout.stripe.com/checkout.js"
         class="stripe-button"
         data-key="pk_Fhlzwtm9SCx6Uxww5fNXX8CUbwwAc"
