--- a/public/assignment/client/views/header/header.view.html
+++ b/public/assignment/client/views/header/header.view.html
@@ -1,4 +1,4 @@
-<nav ng-controller="HeaderController" class="navbar navbar-inverse navbar-fixed-top">
+<nav ng-controller="HeaderController as model" class="navbar navbar-inverse navbar-fixed-top">
     <div class="container-fluid">
         <div class="navbar-header">
             <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar" aria-expanded="false" aria-controls="navbar">
@@ -11,11 +11,24 @@
         </div>
         <div id="navbar" class="navbar-collapse collapse">
             <ul class="nav navbar-nav navbar-right">
-                <li ng-hide="user"><a href="#/register">Register</a></li>
-                <li ng-hide="user"><a href="#/login">Login</a></li>
-                <li ng-show="user"><a href="#/">Logout</a></li>
-                <li ng-show="user"><a href="#/profile">Username</a></li>
-                <li ng-show="user.roles.indexOf('admin') >= 0"><a href="#/admin">Admin</a></li>
+                <li ng-class="{'active' : model.$location.url() == '/home'}">
+                    <a href="#/home">Home</a>
+                </li>
+                <li ng-hide="user">
+                    <a href="#/register">Register</a>
+                </li>
+                <li ng-hide="user">
+                    <a href="#/login">Login</a>
+                </li>
+                <li ng-show="user">
+                    <a ng-click="logout()">Logout</a>
+                </li>
+                <li ng-show="user">
+                    <a href="#/profile">Username</a>
+                </li>
+                <li ng-show="user.roles.indexOf('admin') >= 0">
+                    <a href="#/admin">Admin</a>
+                </li>
             </ul>
             <form class="navbar-form navbar-right">
                 <input type="text" class="form-control" placeholder="Search...">
