--- a/public/assignment/client/views/users/login.view.html
+++ b/public/assignment/client/views/users/login.view.html
@@ -17,6 +17,6 @@
             </div>
         </div>
         <div class="col-xs-2">
-            <button ng-click="login(user)" class="btn btn-primary" type="button">Login</button>
+            <button ng-click="login(user.username, user.password)" class="btn btn-primary" type="button">Login</button>
         </div>
     </form>
