--- a/public/assignment/client/views/users/register.view.html
+++ b/public/assignment/client/views/users/register.view.html
@@ -29,7 +29,7 @@
             <label for="email"> Email</label>
         </div>
         <div class="col-xs-9">
-            <input ng-model="email" id="email" class="form-control" type="email" placeholder="youremail@domain.com"/>
+            <input ng-model="user.email" id="email" class="form-control" type="email" placeholder="youremail@domain.com"/>
         </div>
     </div>
     <div class="col-xs-2">
