--- a/public/project/client/views/header/header.view.html
+++ b/public/project/client/views/header/header.view.html
@@ -1,53 +1,109 @@
-<!-- NAVBAR
-================================================== -->
-<body>
-<div class="navbar-wrapper">
-    <div class="container">
-
-        <nav class="navbar navbar-inverse navbar-static-top">
-            <div class="container">
-                <div class="navbar-header">
-                    <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar" aria-expanded="false" aria-controls="navbar">
-                        <span class="sr-only">Toggle navigation</span>
-                        <span class="icon-bar"></span>
-                        <span class="icon-bar"></span>
-                        <span class="icon-bar"></span>
-                    </button>
-                    <a class="navbar-brand" href="#home">Hairloom</a>
-                </div>
-                <div id="navbar" class="navbar-collapse collapse">
-                    <ul class="nav navbar-nav">
-                        <li class="active"><a href="#home">Home</a></li>
-                        <li><a href="#appointment">Appointment</a></li>
-                        <li><a href="#checkout">Checkout</a></li>
-                        <li class="dropdown">
-                            <a href="#home" id="loginDropdown" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">
-                                Login <span class="caret"></span></a>
-                            <ul class="dropdown-menu" aria-labelledby="loginDropdown">
-                                <li><a href="#cust_login">Customer</a></li>
-                                <li><a href="#prof_login">Salon Professional</a></li>
-                            </ul>
-                        </li>
-                        <li class="dropdown">
-                            <a href="#home" id="registrationDropdown" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">
-                                Registration <span class="caret"></span></a>
-                            <ul class="dropdown-menu" aria-labelledby="registrationDropdown">
-                                <li><a href="#cust_register">Customer</a></li>
-                                <li><a href="#prof_register">Salon Professional</a></li>
-                            </ul>
-                        </li>
-                        <li class="dropdown">
-                            <a href="#home" id="profileDropdown" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">
-                                Profile <span class="caret"></span></a>
-                            <ul class="dropdown-menu" aria-labelledby="profileDropdown">
-                                <li><a href="#cust_profile">Customer</a></li>
-                                <li><a href="#prof_profile">Salon Professional</a></li>
-                            </ul>
-                        </li>
-                    </ul>
-                </div>
+<div id="page-top" class="index">
+    <nav class="navbar navbar-default navbar-fixed-top">
+        <div class="container">
+            <!-- Brand and toggle get grouped for better mobile display -->
+            <div class="navbar-header page-scroll">
+                <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1">
+                    <span class="sr-only">Toggle navigation</span>
+                    <span class="icon-bar"></span>
+                    <span class="icon-bar"></span>
+                    <span class="icon-bar"></span>
+                </button>
+                <a class="navbar-brand page-scroll" href="#page-top">Hairloom</a>
             </div>
-        </nav>
 
-    </div>
+            <!-- Collect the nav links, forms, and other content for toggling -->
+            <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
+                <ul class="nav navbar-nav navbar-right">
+                    <li class="hidden">
+                        <a href="#page-top"></a>
+                    </li>
+                    <li><a href="#appointment">Appointment</a></li>
+                    <li><a href="#checkout">Checkout</a></li>
+                    <li class="dropdown">
+                        <a id="loginDropdown" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">
+                            Login <span class="caret"></span></a>
+                        <ul class="dropdown-menu" aria-labelledby="loginDropdown">
+                            <li><a href="#cust_login">Customer</a></li>
+                            <li><a href="#prof_login">Salon Professional</a></li>
+                        </ul>
+                    </li>
+                    <li class="dropdown">
+                        <a id="registrationDropdown" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">
+                            Registration <span class="caret"></span></a>
+                        <ul class="dropdown-menu" aria-labelledby="registrationDropdown">
+                            <li><a href="#cust_register">Customer</a></li>
+                            <li><a href="#prof_register">Salon Professional</a></li>
+                        </ul>
+                    </li>
+                    <li class="dropdown">
+                        <a id="profileDropdown" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">
+                            Profile <span class="caret"></span></a>
+                        <ul class="dropdown-menu" aria-labelledby="profileDropdown">
+                            <li>
+                                <a href="#cust_profile">Customer</a>
+                            </li>
+                            <li><a href="#prof_profile">Salon Professional</a>
+                            </li>
+                        </ul>
+                    <li>
+                        <a class="page-scroll" href="#works">How it Works</a>
+                    </li>
+                    <li>
+                        <a class="page-scroll" href="#stylists">Stylists</a>
+                    </li>
+                    <li>
+                        <a class="page-scroll" href="#contact">Contact</a>
+                    </li>
+                </ul>
+            </div>
+            <!-- /.navbar-collapse -->
+        </div>
+        <!-- /.container-fluid -->
+    </nav>
 </div>
+
+<!--<nav class="navbar navbar-default navbar-fixed-top">-->
+            <!--<div class="container">-->
+                <!--<div class="navbar-header">-->
+                    <!--<button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar" aria-expanded="false" aria-controls="navbar">-->
+                        <!--<span class="sr-only">Toggle navigation</span>-->
+                        <!--<span class="icon-bar"></span>-->
+                        <!--<span class="icon-bar"></span>-->
+                        <!--<span class="icon-bar"></span>-->
+                    <!--</button>-->
+                    <!--<a class="navbar-brand" href="#home">Hairloom</a>-->
+                <!--</div>-->
+                <!--<div id="navbar" class="navbar-collapse collapse">-->
+                    <!--<ul class="nav navbar-nav">-->
+                        <!--<li class="active"><a href="#home">Home</a></li>-->
+                        <!--<li><a href="#appointment">Appointment</a></li>-->
+                        <!--<li><a href="#checkout">Checkout</a></li>-->
+                        <!--<li class="dropdown">-->
+                            <!--<a href="#home" id="loginDropdown" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">-->
+                                <!--Login <span class="caret"></span></a>-->
+                            <!--<ul class="dropdown-menu" aria-labelledby="loginDropdown">-->
+                                <!--<li><a href="#cust_login">Customer</a></li>-->
+                                <!--<li><a href="#prof_login">Salon Professional</a></li>-->
+                            <!--</ul>-->
+                        <!--</li>-->
+                        <!--<li class="dropdown">-->
+                            <!--<a href="#home" id="registrationDropdown" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">-->
+                                <!--Registration <span class="caret"></span></a>-->
+                            <!--<ul class="dropdown-menu" aria-labelledby="registrationDropdown">-->
+                                <!--<li><a href="#cust_register">Customer</a></li>-->
+                                <!--<li><a href="#prof_register">Salon Professional</a></li>-->
+                            <!--</ul>-->
+                        <!--</li>-->
+                        <!--<li class="dropdown">-->
+                            <!--<a href="#home" id="profileDropdown" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">-->
+                                <!--Profile <span class="caret"></span></a>-->
+                            <!--<ul class="dropdown-menu" aria-labelledby="profileDropdown">-->
+                                <!--<li><a href="#cust_profile">Customer</a></li>-->
+                                <!--<li><a href="#prof_profile">Salon Professional</a></li>-->
+                            <!--</ul>-->
+                        <!--</li>-->
+                    <!--</ul>-->
+                <!--</div>-->
+            <!--</div>-->
+        <!--</nav>-->
