--- a/public/project/client/views/users/customer/appointment.view.html
+++ b/public/project/client/views/users/customer/appointment.view.html
@@ -1,26 +1,37 @@
-<h1 class="page-header">Choose Appointment</h1>
-<div class="container">
-    <div class="row">
-        <div class="col-xs-12">
-            <p>Select Appointment time</p>
-            </div>
-        <div class="col-xs-12">
-        <ul class="dropdown">
-            <a href="#appointment" id="appointmentDropdown" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">
-                Choose time <span class="caret"></span></a>
-            <ul class="dropdown-menu" aria-labelledby="appointmentDropdown">
-                <li>9:00 - 10:00</li>
-                <li>10:00 - 11:00</li>
-                <li>11:00 - 12:00</li>
-                <li>12:00 - 13:00</li>
-                <li>13:00 - 14:00</li>
-                <li>15:00 - 16:00</li>
-                <li>16:00 - 17:00</li>
-                <li>17:00 - 18:00</li>
-                <li>18:00 - 19:00</li>
-            </ul>
-        </ul>
-        </div>
-        </div>
+<div class="customBG">
+    <div class="container">
+        <h1 class="page-header">Schedule an Appointment</h1>
+<div class="row">
+    <div class="col-xs-12">
+        <p>Select Preferred Time</p>
     </div>
+    <div class="col-xs-6">
+        <select class="form-control">
+            <option> 9:00 - 10:00</option>
+            <option>10:00 - 11:00</option>
+            <option>11:00 - 12:00</option>
+            <option>12:00 - 13:00</option>
+            <option>13:00 - 14:00</option>
+            <option>15:00 - 16:00</option>
+            <option>16:00 - 17:00</option>
+            <option>17:00 - 18:00</option>
+            <option>18:00 - 19:00</option>
+        </select>
+    </div>
+    <div class="col-xs-12">
+        <p>Select Price Range</p>
+    </div>
+    <div class="col-xs-6">
+        <select id="priceRange" class="form-control">
+            <option> $</option>
+            <option>$$</option>
+            <option>$$$</option>
+        </select>
+    </div>
+    </div>
+<div class="btn btn-success">Submit
+</div>
+<p> is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages,
+    and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.</p>
+</div>
 </div>
