--- a/public/assignment/client/views/forms/fields.view.html
+++ b/public/assignment/client/views/forms/fields.view.html
@@ -76,7 +76,7 @@
 
                 <div class="modal-footer">
                     <button type="button" class="btn btn-default" data-dismiss="modal">Cancel</button>
-                    <button type="submit" class="btn btn-primary" data-dismiss="modal" ng-click="updateField(fieldModal)">Ok</button>
+                    <button type="submit" class="btn btn-primary" data-dismiss="modal" ng-click="updateField(fieldModal)">Update</button>
                 </div>
 
             </div>
