Project work and trying to fix openshift error

--- a/public/project/client/views/users/professional/profile.view.html
+++ b/public/project/client/views/users/professional/profile.view.html
@@ -1,7 +1,7 @@
 <div class="customBG">
     <div class="container">
     <h1 class="page-header">Profile</h1>
-        <form ng-controller="ProfileController" class="form-horizontal">
+        <form ng-controller="ProfessionalProfileController" class="form-horizontal">
             <div class="form-group">
                 <div class="col-xs-2">
                     <label for="userName">Username :</label>
