--- a/public/project/client/views/users/customer/register.view.html
+++ b/public/project/client/views/users/customer/register.view.html
@@ -1,5 +1,42 @@
 <div class="customBG">
     <div class="container">
-
+        <h1 class="page-header">Registration for Customers</h1>
+        <form ng-controller="CustRegisterController" class="form-horizontal">
+            <div class="form-group">
+                <div class="col-xs-2">
+                    <label for="username">Username</label>
+                </div>
+                <div class="col-xs-9">
+                    <input ng-model="customer.username" id="username" class="form-control" type="text" placeholder="Username"/>
+                </div>
+            </div>
+            <div class="form-group">
+                <div class="col-xs-2">
+                    <label for="password"> Password</label>
+                </div>
+                <div class="col-xs-9">
+                    <input ng-model="customer.password" id="password" class="form-control" type="password" placeholder="Password"/>
+                </div>
+            </div>
+            <div class="form-group">
+                <div class="col-xs-2">
+                    <label for="verifyPassword">Verify Password</label>
+                </div>
+                <div class="col-xs-9">
+                    <input ng-model="customer.password" id="verifyPassword" class="form-control" type="password" placeholder="Password"/>
+                </div>
+            </div>
+            <div class="form-group">
+                <div class="col-xs-2">
+                    <label for="email"> Email</label>
+                </div>
+                <div class="col-xs-9">
+                    <input ng-model="customer.email" id="email" class="form-control" type="email" placeholder="youremail@domain.com"/>
+                </div>
+            </div>
+            <div class="col-xs-2">
+                <button ng-click="register(customer)" class="btn btn-primary" type="button">Register</button>
+            </div>
+        </form>
     </div>
 </div>
