--- a/public/project/client/views/users/professional/login.view.html
+++ b/public/project/client/views/users/professional/login.view.html
@@ -1,7 +1,7 @@
 <div class="customBG">
     <div class="container">
-    <h1 class="page-header">Login </h1>
-        <form ng-controller="LoginController" ng-class="form-horizontal">
+    <h1 class="page-header">Login for Salon Professionals</h1>
+        <form ng-controller="ProfessionalLoginController" ng-class="form-horizontal">
             <div class="form-group">
                 <div class="col-xs-2">
                     <label for="userName">Username:</label>
@@ -19,7 +19,7 @@
                 </div>
             </div>
             <div class="col-xs-2">
-                <button class="btn btn-primary" type="button">Login As Salon Professional</button>
+                <button class="btn btn-primary" type="button">Login</button>
             </div>
         </form>
     </div>
