--- a/public/project/client/views/users/professional/register.view.html
+++ b/public/project/client/views/users/professional/register.view.html
@@ -1,30 +1,30 @@
 <div class="customBG">
     <div class="container">
-    <h1 class="page-header">Register</h1>
-        <form ng-controller="RegisterController" class="form-horizontal">
-            <script>
-                window.fbAsyncInit = function() {
-                    FB.init({
-                        appId      : '504641723054228',
-                        xfbml      : true,
-                        version    : 'v2.5'
-                    });
-                };
+    <h1 class="page-header">Registration for Salon Professionals</h1>
+        <form ng-controller="ProfessionalRegisterController" class="form-horizontal">
+            <!--<script>-->
+                <!--window.fbAsyncInit = function() {-->
+                    <!--FB.init({-->
+                        <!--appId      : '504641723054228',-->
+                        <!--xfbml      : true,-->
+                        <!--version    : 'v2.5'-->
+                    <!--});-->
+                <!--};-->
 
-                (function(d, s, id){
-                    var js, fjs = d.getElementsByTagName(s)[0];
-                    if (d.getElementById(id)) {return;}
-                    js = d.createElement(s); js.id = id;
-                    js.src = "//connect.facebook.net/en_US/sdk.js";
-                    fjs.parentNode.insertBefore(js, fjs);
-                }(document, 'script', 'facebook-jssdk'));
-            </script>
-            <h2 class="page-header">Customers</h2>
-            <h6>No need to create an account. Yay!! </h6>
-            <!--<div class="btn btn-primary">Login with Facebook</div>-->
-            <div class="fb-login-button" data-max-rows="1" data-size="medium" data-show-faces="false" data-auto-logout-link="false"></div>
+                <!--(function(d, s, id){-->
+                    <!--var js, fjs = d.getElementsByTagName(s)[0];-->
+                    <!--if (d.getElementById(id)) {return;}-->
+                    <!--js = d.createElement(s); js.id = id;-->
+                    <!--js.src = "//connect.facebook.net/en_US/sdk.js";-->
+                    <!--fjs.parentNode.insertBefore(js, fjs);-->
+                <!--}(document, 'script', 'facebook-jssdk'));-->
+            <!--</script>-->
+            <!--<h2 class="page-header">Customers</h2>-->
+            <!--<h6>No need to create an account. Yay!! </h6>-->
+            <!--&lt;!&ndash;<div class="btn btn-primary">Login with Facebook</div>&ndash;&gt;-->
+            <!--<div class="fb-login-button" data-max-rows="1" data-size="medium" data-show-faces="false" data-auto-logout-link="false"></div>-->
 
-            <h2 class="page-header">Salon Professionals</h2>
+            <!--<h2 class="page-header">Salon Professionals</h2>-->
             <div class="form-group">
                 <div class="col-xs-2">
                     <label for="username">Username</label>
@@ -58,7 +58,7 @@
                 </div>
             </div>
             <div class="col-xs-2">
-                <button ng-click="register(user)" class="btn btn-primary" type="button">Register As a Salon Professional</button>
+                <button ng-click="register(user)" class="btn btn-primary" type="button">Register</button>
             </div>
         </form>
     </div>
