Implementing passport JS

--- a/public/project/client/views/users/customer/login.view.html
+++ b/public/project/client/views/users/customer/login.view.html
@@ -1,5 +1,6 @@
 <!--<h1 class="page-header">Login For Customers</h1>-->
-<div class="container" ng-controller="fbLoginController">
+<div class="customBG">
+<div class="container" ng-controller="CustLoginController">
     <h2 class="page-header">Login Details</h2>
 <form  ng-class="form-horizontal">
     <script>
@@ -24,4 +25,5 @@
     <!--<div class="btn btn-primary">Login with Facebook</div>-->
     <div class="fb-login-button" data-max-rows="1" data-size="medium" data-show-faces="false" data-auto-logout-link="false"></div>
 </form>
+</div>
 </div>
