--- a/public/project/client/views/users/customer/register.view.html
+++ b/public/project/client/views/users/customer/register.view.html
@@ -39,4 +39,7 @@
             </div>
         </form>
     </div>
+    <div ng-if="error" class="alert alert-danger" role="alert">
+        Cannot Register Customer. Please Try Later!
+    </div>
 </div>
