--- a/public/assignment/client/views/admin/admin.view.html
+++ b/public/assignment/client/views/admin/admin.view.html
@@ -1,6 +1,6 @@
-<h1 class="page-header">Admin</h1>
+<h1 class="page-header" xmlns="http://www.w3.org/1999/html">Admin</h1>
 <h2 class="sub-header">Users</h2>
-<div class="table-responsive">
+<div class="table-responsive" ng-controller="AdminController">
     <table class="table table-striped table-bordered">
         <thead>
             <tr>
@@ -11,7 +11,13 @@
                     <span class="glyphicon glyphicon-chevron-down" aria-label="sort"></span>  Password
                 </th>
                 <th>
-                    <span class="glyphicon glyphicon-chevron-down" aria-label="sort"></span>  Role
+                    <span class="glyphicon glyphicon-chevron-down" aria-label="sort"></span>  First Name
+                </th>
+                <th>
+                    <span class="glyphicon glyphicon-chevron-down" aria-label="sort"></span>  Last Name
+                </th>
+                <th>
+                    <span class="glyphicon glyphicon-chevron-down" aria-label="sort"></span>  Roles
                 </th>
                 <th>
                     Actions
@@ -22,51 +28,46 @@
              <tr>
                  <td>
                     <form class="form-horizontal">
-                     <input id="username" class="form-control" type="text" placeholder="username"/>
+                     <input id="username" class="form-control" type="text" placeholder="username" ng-model="currentUser.username">
                     </form>
                  </td>
                  <td>
                      <form class="form-horizontal">
-                      <input id="password" class="form-control" type="text" placeholder="password"/>
+                      <input id="password" class="form-control" type="text" placeholder="password" ng-model="currentUser.password"/>
                      </form>
                  </td>
                  <td>
                      <form class="form-horizontal">
-                         <input id="roles" class="form-control" type="text" placeholder="roles"/>
+                         <input id="firstName" class="form-control" type="text" placeholder="firstName" ng-model="currentUser.firstName"/>
                      </form>
                  </td>
                  <td>
-                     <span class="glyphicon glyphicon-plus"></span>
-                     <span class="glyphicon glyphicon-ok"></span>
+                     <form class="form-horizontal">
+                         <input id="lastName" class="form-control" type="text" placeholder="lastName" ng-model="currentUser.lastName"/>
+                     </form>
+                 </td>
+                 <td>
+                     <form class="form-horizontal">
+                         <input id="roles" class="form-control" ng-model="currentUser.roles" placeholder="roles" />
+                     </form>
+                 </td>
+                 <td>
+                     <span class="btn glyphicon glyphicon-plus"  ng-click="addUser(currentUser)"></span>
+                     <span class="btn glyphicon glyphicon-ok" ng-click="updateUser(currentUser)"></span>
 
                  </td>
              </tr>
-             <tr>
-                 <td>alice</td>
-                 <td></td>
-                 <td>student</td>
+             <tr ng-repeat="user in users">
+                 <td>{{user.username}}</td>
+                 <td>{{user.password}}</td>
+                 <td>{{user.firstName}}</td>
+                 <td>{{user.lastName}}</td>
+                 <td>{{user.roles}}</td>
                  <td>
-                     <span class="glyphicon glyphicon-remove"></span>
-                     <span class="glyphicon glyphicon-pencil"></span>
+                     <span class="btn glyphicon glyphicon-remove" ng-click="deleteUser(user)" ng-hide="user.roles.indexOf('admin') >= 0"></span>
+                     <span class="btn glyphicon glyphicon-pencil" ng-click="selectUser(user)"></span>
                  </td>
              </tr>
-             <tr>
-                 <td>bob</td>
-                 <td></td>
-                 <td>faculty |  admin</td>
-                 <td>
-                 <span class="glyphicon glyphicon-remove"></span>
-                 <span class="glyphicon glyphicon-pencil"></span>
-                 </td>
-             </tr>
-             <tr>
-                 <td>charlie</td>
-                 <td></td>
-                 <td></td>
-                 <td>
-                 <span class="glyphicon glyphicon-remove"></span>
-                 <span class="glyphicon glyphicon-pencil"></span>
-             </td>
              </tr>
         </tbody>
     </table>
