--- a/public/assignment/client/views/users/login.view.html
+++ b/public/assignment/client/views/users/login.view.html
@@ -1,5 +1,8 @@
 <h1 class="page-header">Login</h1>
-    <form ng-controller="LoginController" ng-class="form-horizontal">
+ <form ng-controller="LoginController" ng-class="form-horizontal">
+     <div ng-if="message" class="alert alert-danger" role="alert">
+         {{message}}
+     </div>
         <div class="form-group">
             <div class="col-xs-2">
                 <label for="userName">Username:</label>
@@ -17,6 +20,6 @@
             </div>
         </div>
         <div class="col-xs-2">
-            <button ng-click="login(user.username, user.password)" class="btn btn-primary" type="button">Login</button>
+            <button ng-click="login(user)" class="btn btn-primary" type="button">Login</button>
         </div>
-    </form>
+ </form>
