--- a/public/project/client/views/users/customer/profile.view.html
+++ b/public/project/client/views/users/customer/profile.view.html
@@ -1,7 +1,7 @@
 <div class="customBG">
-    <div class="container">
-        <h1 class="page-header">Profile</h1>
-        <form ng-controller="ProfileController" class="form-horizontal">
+    <div ng-controller="CustProfileController" class="container">
+        <h1 class="page-header">{{customer.firstName}} Profile</h1>
+        <form class="form-horizontal">
             <div class="col-sm-12" data-example-id="thumbnails-with-custom-content">
                 <div class="row">
                     <div class="col-sm-6 col-md-4">
@@ -14,13 +14,12 @@
                     </div>
                 </div>
             </div>
-
             <div class="form-group">
                 <div class="col-xs-2">
                     <label for="userName">Username :</label>
                 </div>
                 <div class="col-xs-9">
-                    <input ng-model="user.username" id="userName" class="form-control" type="text" placeholder="Username"/>
+                    <input ng-model="customer.username" id="userName" class="form-control" type="text" placeholder="Username"/>
                 </div>
             </div>
             <div class="form-group">
@@ -28,7 +27,7 @@
                     <label for="password"> Password :</label>
                 </div>
                 <div class="col-xs-9">
-                    <input ng-model="user.password" id="password" class="form-control" type="password" placeholder="Password"/>
+                    <input ng-model="customer.password" id="password" class="form-control" type="password" placeholder="Password"/>
                 </div>
             </div>
             <div class="form-group">
@@ -36,7 +35,7 @@
                     <label for="firstName">First Name :</label>
                 </div>
                 <div class="col-xs-9">
-                    <input ng-model="user.firstName" id="firstName" class="form-control" type="text" placeholder="First Name"/>
+                    <input ng-model="customer.firstName" id="firstName" class="form-control" type="text" placeholder="First Name"/>
                 </div>
             </div>
             <div class="form-group">
@@ -44,11 +43,11 @@
                     <label for="lastName">Last Name :</label>
                 </div>
                 <div class="col-xs-9">
-                    <input ng-model="user.lastName" id="lastName" class="form-control" type="text" placeholder="Last Name"/>
+                    <input ng-model="customer.lastName" id="lastName" class="form-control" type="text" placeholder="Last Name"/>
                 </div>
             </div>
             <div class="col-xs-2">
-                <button ng-click="update(user)"class="btn btn-primary" type="button">Update</button>
+                <button ng-click="update(customer)"class="btn btn-primary" type="button">Update</button>
             </div>
         </form>
     </div>
