--- a/public/assignment/client/views/admin/admin.view.html
+++ b/public/assignment/client/views/admin/admin.view.html
@@ -5,19 +5,19 @@
         <thead>
             <tr>
                 <th>
-                    <span class="glyphicon glyphicon-chevron-down" aria-label="sort"></span>  Username
+                    <span class="glyphicon glyphicon-triangle-bottom" aria-label="sort"></span>  Username
                 </th>
                 <th>
-                    <span class="glyphicon glyphicon-chevron-down" aria-label="sort"></span>  Password
+                    <span class="glyphicon glyphicon-triangle-bottom" aria-label="sort"></span>  Password
                 </th>
                 <th>
-                    <span class="glyphicon glyphicon-chevron-down" aria-label="sort"></span>  First Name
+                    <span class="glyphicon glyphicon-triangle-bottom" aria-label="sort"></span>  First Name
                 </th>
                 <th>
-                    <span class="glyphicon glyphicon-chevron-down" aria-label="sort"></span>  Last Name
+                    <span class="glyphicon glyphicon-triangle-bottom" aria-label="sort"></span>  Last Name
                 </th>
                 <th>
-                    <span class="glyphicon glyphicon-chevron-down" aria-label="sort"></span>  Roles
+                    <span class="glyphicon glyphicon-triangle-bottom" aria-label="sort"></span>  Roles
                 </th>
                 <th>
                     Actions
@@ -65,7 +65,7 @@
                  <td>{{user.roles}}</td>
                  <td>
                      <span class="btn glyphicon glyphicon-remove" ng-click="deleteUser(user)" ng-hide="user.roles.indexOf('admin') >= 0"></span>
-                     <span class="btn glyphicon glyphicon-pencil" ng-click="selectUser(user)"></span>
+                     <span class="btn glyphicon glyphicon-cog" ng-click="selectUser(user)"></span>
                  </td>
              </tr>
              </tr>
