--- a/public/project/client/views/users/customer/checkout.view.html
+++ b/public/project/client/views/users/customer/checkout.view.html
@@ -5,8 +5,8 @@
         <script src="https://checkout.stripe.com/checkout.js"
             class="stripe-button"
             data-key="pk_Fhlzwtm9SCx6Uxww5fNXX8CUbwwAc"
-            data-amount="2000"
-            data-name="Demo Site"
+            data-amount=
+            data-name="HairLoom"
             data-description="2 widgets ($20.00)"
             data-image="">
         </script>
