--- a/public/project/client/css/agency.css
+++ b/public/project/client/css/agency.css
@@ -199,7 +199,7 @@ fieldset[disabled] .btn-xl.active {
 }
 @media (min-width: 768px) {
     .navbar-default {
-        background-color: transparent;
+        background-color: black;
         padding: 25px 0;
         -webkit-transition: padding 0.3s;
         -moz-transition: padding 0.3s;
