--- a/public/project/client/views/users/professional/profile.view.html
+++ b/public/project/client/views/users/professional/profile.view.html
@@ -7,7 +7,7 @@
                     <label for="userName">Username :</label>
                 </div>
                 <div class="col-xs-5">
-                    <input ng-model="user.username" id="userName" class="form-control" type="text" placeholder="Username"/>
+                    <input ng-model="currentUser.username" id="userName" class="form-control" type="text" placeholder="Username"/>
                 </div>
             </div>
             <div class="form-group">
@@ -15,7 +15,7 @@
                     <label for="password"> Password :</label>
                 </div>
                 <div class="col-xs-5">
-                    <input ng-model="user.password" id="password" class="form-control" type="password" placeholder="Password"/>
+                    <input ng-model="currentUser.password" id="password" class="form-control" type="password" placeholder="Password"/>
                 </div>
             </div>
             <div class="form-group">
@@ -23,7 +23,7 @@
                     <label for="firstName">First Name :</label>
                 </div>
                 <div class="col-xs-5">
-                    <input ng-model="user.firstName" id="firstName" class="form-control" type="text" placeholder="First Name"/>
+                    <input ng-model="currentUser.firstName" id="firstName" class="form-control" type="text" placeholder="First Name"/>
                 </div>
             </div>
             <div class="form-group">
@@ -31,11 +31,24 @@
                     <label for="lastName">Last Name :</label>
                 </div>
                 <div class="col-xs-5">
-                    <input ng-model="user.lastName" id="lastName" class="form-control" type="text" placeholder="Last Name"/>
+                    <input ng-model="currentUser.lastName" id="lastName" class="form-control" type="text" placeholder="Last Name"/>
                 </div>
             </div>
+            <div class="form-group">
+                <div class="col-xs-2">
+                    <label for="services">Services offered :</label>
+                </div>
+                <div class="col-xs-5">
+                    <input ng-model="currentUser.services" class="form-control" type="text" placeholder="Salon Services"/>
+                </div>
+            </div>
+            <!--<div class="row" style="align-content: center">-->
+                <!--<div class="col-xs-2" ng-repeat="service in currentUser.services">-->
+                    <!--<button class="btn btn-success">{{service}}</button>-->
+                <!--</div>-->
+            <!--</div>-->
             <div class="col-xs-2">
-                <button ng-click="update(user)"class="btn btn-primary" type="button">Update</button>
+                <button ng-click="update(currentUser)"class="btn btn-primary" type="button">Update</button>
             </div>
         </form>
     </div>
