--- a/public/project/client/views/users/professional/register.view.html
+++ b/public/project/client/views/users/professional/register.view.html
@@ -30,7 +30,7 @@
                     <label for="username">Username</label>
                 </div>
                 <div class="col-xs-9">
-                    <input ng-model="user.username" id="username" class="form-control" type="text" placeholder="Username"/>
+                    <input ng-model="currentUser.username" id="username" class="form-control" type="text" placeholder="Username"/>
                 </div>
             </div>
             <div class="form-group">
@@ -38,7 +38,7 @@
                     <label for="password"> Password</label>
                 </div>
                 <div class="col-xs-9">
-                    <input ng-model="user.password" id="password" class="form-control" type="password" placeholder="Password"/>
+                    <input ng-model="currentUser.password" id="password" class="form-control" type="password" placeholder="Password"/>
                 </div>
             </div>
             <div class="form-group">
@@ -46,7 +46,7 @@
                     <label for="verifyPassword">Verify Password</label>
                 </div>
                 <div class="col-xs-9">
-                    <input ng-model="user.password" id="verifyPassword" class="form-control" type="password" placeholder="Password"/>
+                    <input ng-model="currentUser.password" id="verifyPassword" class="form-control" type="password" placeholder="Password"/>
                 </div>
             </div>
             <div class="form-group">
@@ -54,11 +54,11 @@
                     <label for="email"> Email</label>
                 </div>
                 <div class="col-xs-9">
-                    <input ng-model="email" id="email" class="form-control" type="email" placeholder="youremail@domain.com"/>
+                    <input ng-model="currentUser.email" id="email" class="form-control" type="email" placeholder="youremail@domain.com"/>
                 </div>
             </div>
             <div class="col-xs-2">
-                <button ng-click="register(user)" class="btn btn-primary" type="button">Register</button>
+                <button ng-click="register(currentUser)" class="btn btn-primary" type="button">Register</button>
             </div>
         </form>
     </div>
